--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Warikozi-resume</title>
     <link href= "boostrap.css" rel="stylesheet">
     <link href= "resume.css" rel="stylesheet">
     <link href= "awesome.css" rel="stylesheet">
