add a pic to title tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Warikozi-resume</title>
+	<link rel="icon" href="me.jpg" type="image/x-icon">
     <link href= "boostrap.css" rel="stylesheet">
     <link href= "resume.css" rel="stylesheet">
     <link href= "awesome.css" rel="stylesheet">
