--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
                 <li id = "myname"></li>
                 <li id = "myemail"></li>
                 <li id = "website"></li>
-                <li id = "github"></li>
                         <li id = "phone"></li>
 
             </ul>
@@ -72,7 +71,13 @@
             <div class="job-wrapper clearfix">
                 <div class="experience-title" id = "occupation"> </div> <!-- JOB TITLE  -->
               <div class="company-description">
-                <p  id = "frontEnd"></p>  <!-- JOB DESCRIPTION  -->
+                <p  id = "dev"></p> <!-- Edu DESCRIPTION  -->
+                  <p  id = "enhance"></p>
+                  <p  id = "diminish"></p>
+                  <p  id = "develop"></p>
+                  <p  id = "boost"></p>
+                  <p  id = "database"></p>
+                  <p  id = "frontEnd"></p>
               </div>
             </div>
 
