Adding more contants for UMGC edu

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
                 <p  id = "develop"></p>
                 <p  id = "boost"></p>
                 <p  id = "database"></p>
+
+                <div class="company-description">
+                    <p  id = "applied"></p>
+                </div>
             </div>
 
             <div class="company-wrapper clearfix">
