Added more contants for security edu

--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
                 <div class="company-description">
                     <p  id = "applied"></p>
                 </div>
+                <p  id = "protect"></p>
+                <p  id = "create"></p>
+                <p  id = "conduct"></p>
+                <p  id = "identy"></p>
+                <p  id = "compliy"></p>
+                <p  id = "ensure"></p>
+                <p  id = "maintain"></p>
+                <p  id = "impose"></p>
             </div>
 
             <div class="company-wrapper clearfix">
