--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <body>
     <div class="container">
-        <h1 id="loadingH1"><span><i class="fa fa-cogs"></i></span> RUNNING IDENTITY PROTOCOL<span id="loading">.</span></h1>
+        <h1 id="loadingH1"><span><i class="fa"></i></span> RUNNING IDENTITY PROTOCOL<span id="loading">.</span></h1>
         <div class="img-container">
             <div id="identity-results">
                 <p id="message"></p>
@@ -79,7 +79,7 @@
                 <p  id = "develop"></p>
                 <p  id = "boost"></p>
                 <p  id = "database"></p>
-
+                <p></p>
                 <div class="company-description">
                     <p  id = "applied"></p>
                 </div>
