optimized network admin edu

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
 
             <div class="job-wrapper clearfix">
-                <div class="experience-title" id = "occupation"> </div> <!-- JOB TITLE  -->
+                <div class="experience-title" id = "occupation"> </div> <!--   -->
               <div class="company-description">
                   <p  id = "frontEnd"></p>
               </div>
@@ -103,6 +103,13 @@
               <div class="company-description">
                 <p id = "CSSPre"></p>  <!-- JOB DESCRIPTION  -->
               </div>
+                 <p  id = "forge"></p>
+                 <p  id = "optimized"></p>
+                 <p  id = "deploy"></p>
+                 <p  id = "protected"></p>
+                 <p  id = "rate"></p>
+                 <p  id = "firewall"></p>
+                 <p  id = "layer2"></p>
             </div>
 
               <h3 class="experience-title" style="color: #E7ECEF;" id ="frontEndAnimation" ></h3>
