--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
 
           <div class="section-wrapper clearfix list-content">
             <h3 class="section-title experience-title" id = "skills" ></h3>
-                <ul style="color: #00ebd4;">
-                    <li class="skill-percentage" id = "skill1"></li>
-                    <li class="skill-percentage" id = "skill2"></li>
-                    <li class="skill-percentage" id = "skill3"></li>
-                    <li class="skill-percentage" id = "skill4"></li>
-                    <li class="skill-percentage" id = "skill5"></li>
-                </ul>
+              <p  id = "skill1"></p>
+              <p  id = "skill2"></p>
+              <p  id = "skill3"></p>
+              <p  id = "skill4"></p>
+              <p  id = "skill5"></p>
+              <p  id = "skill6"></p>
+              <p  id = "skill7"></p>
           </div>
 
           <div class="section-wrapper clearfix">
