Fixed the color on skills

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                         <p style="color: #00ebd4;" id ="habitpara"></p>
                     </div>
             </ul>
-                    <ul class="list-content">
-                <li id = "myname"></li>
-                <li id = "myemail"></li>
-                <li id = "website"></li>
-                        <li id = "phone"></li>
+                    <div class="list-content">
+                <p id = "myname"></p>
+                <p id = "myemail"></p>
+                <p id = "website"></p>
+                        <p id = "phone"></p>
 
-            </ul>
+            </div>
           </div>
 
         </section>
@@ -139,7 +139,7 @@
 
           </div><!--Skill experience-->
 
-          <div class="section-wrapper clearfix list-content">
+          <div class="section-wrapper clearfix list-content job-wrapper">
             <h3 class="section-title experience-title" id = "skills" ></h3>
               <p  id = "skill1"></p>
               <p  id = "skill2"></p>
