--- a/index.html
+++ b/index.html
@@ -1,172 +1,335 @@
 <!DOCTYPE html>
+More actions
+
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
+
     <title>Warikozi-resume</title>
+
     <link rel="icon" href="me.jpg" type="image/x-icon">
+
     <link href= "boostrap.css" rel="stylesheet">
+
     <link href= "resume.css" rel="stylesheet">
+
     <link href= "awesome.css" rel="stylesheet">
+
     <link href= "r.css" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
 
 </head>
 
+
+
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
 <body>
+
 <div class="container">
+
     <h1 id="loadingH1"><span><i class="fa"></i></span> RUNNING IDENTITY PROTOCOL<span id="loading">.</span></h1>
+
     <div class="img-container">
+
         <div id="identity-results">
+
             <p id="message"></p>
+
         </div>
+
         <h3 id="loadingMessage2">LOADING RESUME<span id="alpha-loading"></span>.</h3>
+
     </div>
+
     <div class="resume-wrapper">
+
         <section class="profile section-padding">
+
             <div class="container">
+
                 <!--                <div class="picture-resume-wrapper">-->
+
                 <div class="picture-resume">
+
                     <span><img src="me.jpg" alt="" /></span>
 
 
+
+
+
                     <defs>
+
                         <filter id="goo">
+
                             <feGaussianBlur in="SourceGraphic" stdDeviation="8" result="blur" />
+
                             <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 21 -9" result="cm" />
+
                         </filter>
+
                     </defs>
 
-                </div>
-                <div class="clearfix"></div>
-                <div class="clearfix"></div>
-                <ul class="list-content">
-                    <div class="contact-info">
-                        <div class="section-wrapper clearfix">
-                            <h3 class="section-title experience-title" id="h" ></h3>  <!-- DESCRIPTION OF YOUR HOBBIES -->
-                            <p style="color: #00ebd4;" id ="habitpara"></p>
-                        </div>
-                </ul>
-                <div class="list-content">
-                    <p id = "myname"></p>
-                    <p id = "myemail"></p>
-                    <p id = "website"></p>
-                    <p id = "phone"></p>
+
 
                 </div>
+
+                <div class="clearfix"></div>
+
+                <div class="clearfix"></div>
+
+                <ul class="list-content">
+
+                    <div class="contact-info">
+
+                        <div class="section-wrapper clearfix">
+
+                            <h3 class="section-title experience-title" id="h" ></h3>  <!-- DESCRIPTION OF YOUR HOBBIES -->
+
+                            <p style="color: #00ebd4;" id ="habitpara"></p>
+
+                        </div>
+
+                    <div class="list-content">
+
+
+                        <p id = "myname"></p>
+
+
+                        <p id = "myemail"></p>
+
+
+                        <p id = "website"></p>
+
+
+                        <p id = "phone"></p>
+
+
+
             </div>
 
-        </section>
+    </div>
 
-        <section class="experience section-padding">
-            <div class="container">
-                <h3 class="experience-title"  style="color: #E7ECEF;" id = "name"></h3>
+    </section>
 
-                <div class="experience-wrapper">
-                    <div class="company-wrapper clearfix">
-                        <div class="experience-title"  id = "edu"></div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
-                        <div class="time" id = "alias" style="color: green;"></div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+
+
+    <section class="experience section-padding">
+
+        <div class="container">
+
+            <h3 class="experience-title"  style="color: #E7ECEF;" id = "name"></h3>
+
+
+
+            <div class="experience-wrapper">
+
+                <div class="company-wrapper clearfix">
+
+                    <div class="experience-title"  id = "edu"></div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
+
+                    <div class="time" id = "alias" style="color: green;"></div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+
+                </div>
+
+
+
+                <div class="job-wrapper clearfix">
+
+                    <div class="experience-title" id = "occupation"> </div> <!--   -->
+
+                    <div class="company-description">
+
+                        <p  id = "frontEnd"></p>
+
                     </div>
 
-                    <div class="job-wrapper clearfix">
-                        <div class="experience-title" id = "occupation"> </div> <!--   -->
-                        <div class="company-description">
-                            <p  id = "frontEnd"></p>
-                        </div>
-                        <p  id = "dev"></p> <!-- Edu DESCRIPTION  -->
-                        <p  id = "enhance"></p>
-                        <p  id = "diminish"></p>
-                        <p  id = "develop"></p>
-                        <p  id = "boost"></p>
-                        <p  id = "database"></p>
-                        <p></p>
-                        <div class="company-description">
-                            <p  id = "applied"></p>
-                        </div>
-                        <p  id = "protect"></p>
-                        <p  id = "create"></p>
-                        <p  id = "conduct"></p>
-                        <p  id = "identy"></p>
-                        <p  id = "compliy"></p>
-                        <p  id = "ensure"></p>
-                        <p  id = "maintain"></p>
-                        <p  id = "impose"></p>
+                    <p  id = "dev"></p> <!-- Edu DESCRIPTION  -->
+
+                    <p  id = "enhance"></p>
+
+                    <p  id = "diminish"></p>
+
+                    <p  id = "develop"></p>
+
+                    <p  id = "boost"></p>
+
+                    <p  id = "database"></p>
+
+                    <p></p>
+
+                    <div class="company-description">
+
+                        <p  id = "applied"></p>
+
                     </div>
 
-                    <div class="company-wrapper clearfix">
-                        <div class="experience-title" id = "JSFrameworks"></div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
-                        <div class="time" id = "JSLibs" style="color: red;"></div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+                    <p  id = "protect"></p>
+
+                    <p  id = "create"></p>
+
+                    <p  id = "conduct"></p>
+
+                    <p  id = "identy"></p>
+
+                    <p  id = "compliy"></p>
+
+                    <p  id = "ensure"></p>
+
+                    <p  id = "maintain"></p>
+
+                    <p  id = "impose"></p>
+
+                </div>
+
+
+
+                <div class="company-wrapper clearfix">
+
+                    <div class="experience-title" id = "JSFrameworks"></div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
+
+                    <div class="time" id = "JSLibs" style="color: red;"></div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+
+                </div>
+
+
+
+                <div class="job-wrapper clearfix">
+
+                    <div class="experience-title" id = "CSSFrameworks"></div> <!-- JOB TITLE  -->
+
+                    <div class="company-description">
+
+                        <p id = "CSSPre"></p>  <!-- JOB DESCRIPTION  -->
+
                     </div>
 
-                    <div class="job-wrapper clearfix">
-                        <div class="experience-title" id = "CSSFrameworks"></div> <!-- JOB TITLE  -->
-                        <div class="company-description">
-                            <p id = "CSSPre"></p>  <!-- JOB DESCRIPTION  -->
-                        </div>
-                        <p  id = "forge"></p>
-                        <p  id = "optimized"></p>
-                        <p  id = "deploy"></p>
-                        <p  id = "protected"></p>
-                        <p  id = "rate"></p>
-                        <p  id = "firewall"></p>
-                        <p  id = "layer2"></p>
+                    <p  id = "forge"></p>
+
+                    <p  id = "optimized"></p>
+
+                    <p  id = "deploy"></p>
+
+                    <p  id = "protected"></p>
+
+                    <p  id = "rate"></p>
+
+                    <p  id = "firewall"></p>
+
+                    <p  id = "layer2"></p>
+
+                </div>
+
+
+
+                <h3 class="experience-title" style="color: #E7ECEF;" id ="frontEndAnimation" ></h3>
+
+                <div class="company-wrapper clearfix">
+
+                    <div class="experience-title" id = "cmsDevelopment"></div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
+
+                    <div class="time" id = "wordpress" style="color:green;" ></div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+
+                </div>
+
+
+
+                <div class="job-wrapper clearfix">
+
+                    <div class="experience-title" id = "design"> </div> <!-- JOB TITLE  -->
+
+                    <div class="company-description">
+
+                        <p id = "webDesign"></p>   <!-- JOB DESCRIPTION  -->
+
                     </div>
 
-                    <h3 class="experience-title" style="color: #E7ECEF;" id ="frontEndAnimation" ></h3>
-                    <div class="company-wrapper clearfix">
-                        <div class="experience-title" id = "cmsDevelopment"></div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
-                        <div class="time" id = "wordpress" style="color:green;" ></div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+                </div>
+
+
+
+                <div class="company-wrapper clearfix">
+
+                    <div class="experience-title" id = "branding"></div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
+
+                    <div class="time" id = "designAnimation" style="color: #F42C04;"></div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+
+                </div>
+
+
+
+                <div class="job-wrapper clearfix">
+
+                    <div class="experience-title" id = "rise"> </div> <!-- JOB TITLE  -->
+
+                    <div class="company-description">
+
+                        <p id = "para"></p>   <!-- JOB DESCRIPTION  -->
+
                     </div>
 
-                    <div class="job-wrapper clearfix">
-                        <div class="experience-title" id = "design"> </div> <!-- JOB TITLE  -->
-                        <div class="company-description">
-                            <p id = "webDesign"></p>   <!-- JOB DESCRIPTION  -->
-                        </div>
-                    </div>
+                </div>
 
-                    <div class="company-wrapper clearfix">
-                        <div class="experience-title" id = "branding"></div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
-                        <div class="time" id = "designAnimation" style="color: #F42C04;"></div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
-                    </div>
 
-                    <div class="job-wrapper clearfix">
-                        <div class="experience-title" id = "rise"> </div> <!-- JOB TITLE  -->
-                        <div class="company-description">
-                            <p id = "para"></p>   <!-- JOB DESCRIPTION  -->
-                        </div>
-                    </div>
 
-                </div><!--Skill experience-->
+            </div><!--Skill experience-->
 
                 <div class="section-wrapper clearfix list-content job-wrapper">
+
                     <h3 class="section-title experience-title" id = "skills" ></h3>
-                    <ul >
-                        <li id = "skill1"></li>
-                        <li id = "skill2"></li>
-                        <li id = "skill3"></li>
-                        <li id = "skill4"></li>
-                        <li id = "skill5"></li>
-                        <li id = "skill6"></li>
-                        <li id = "skill7"></li>
-                    </ul>
+
+                    <p class="skill-percentage" id = "skill1"></p>
+                    <p  class="skill-percentage" id = "skill2"></p>
+
+                    <p  id = "skill3"></p>
+
+                    <p  id = "skill4"></p>
+
+                    <p  id = "skill5"></p>
+
+                    <p  id = "skill6"></p>
+
+                    <p  id = "skill7"></p>
+
                 </div>
+
+
 
                 <div class="section-wrapper clearfix">
+
                     <h3 class="section-title experience-title" id="title" ></h3>  <!-- DESCRIPTION OF YOUR HOBBIES -->
+
                     <p style="color: #00ebd4;" id ="myhabits"></p>
+
+
 
                 </div>
 
-            </div>
-        </section>
 
-        <div class="clearfix"></div>
-    </div>
-    <script src="jquery.min.js" type="text/javascript"></script>
-    <script src="resume.js" type="text/javascript"></script>
-    <script src="TweenMax.min.js" type="text/javascript"></script>
-    <script src="r.js" type="text/javascript"></script>
+
+            </div>
+
+    </section>
+
+
+
+    <div class="clearfix"></div>
+
 </div>
+
+<script src="jquery.min.js" type="text/javascript"></script>
+
+<script src="resume.js" type="text/javascript"></script>
+
+<script src="TweenMax.min.js" type="text/javascript"></script>
+
+<script src="r.js" type="text/javascript"></script>
+
+</div>
+
 </body>
-</html>
