--- a/index.html
+++ b/index.html
@@ -279,23 +279,15 @@ More actions
 
             </div><!--Skill experience-->
 
-                <div class="section-wrapper clearfix list-content job-wrapper">
-
+                <div class="section-wrapper clearfix list-content">
                     <h3 class="section-title experience-title" id = "skills" ></h3>
-
                     <p class="skill-percentage" id = "skill1"></p>
                     <p  class="skill-percentage" id = "skill2"></p>
-
-                    <p  id = "skill3"></p>
-
-                    <p  id = "skill4"></p>
-
-                    <p  id = "skill5"></p>
-
-                    <p  id = "skill6"></p>
-
-                    <p  id = "skill7"></p>
-
+                    <p  class = "skill-percentage" id = "skill3"></p>
+                    <p  class = "skill-percentage" id = "skill4"></p>
+                    <p class = "skill-percentage" id = "skill5"></p>
+                    <p class = "skill-percentage" id = "skill6"></p>
+                    <p  class = "skill-percentage" id = "skill7"></p>
                 </div>
 
 
