edit skills part 4

--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-More actions
-
 <html lang="en">
 
 <head>
@@ -52,8 +50,6 @@ More actions
         <section class="profile section-padding">
 
             <div class="container">
-
-                <!--                <div class="picture-resume-wrapper">-->
 
                 <div class="picture-resume">
 
@@ -281,7 +277,7 @@ More actions
 
                 <div class="section-wrapper clearfix list-content">
                     <h3 class="section-title experience-title" id = "skills" ></h3>
-                    <p class="skill-percentage" id = "skill1"></p>
+                    <p class="skill-percentage job-wrapper" id = "skill1"></p>
                     <p  class="skill-percentage" id = "skill2"></p>
                     <p  class = "skill-percentage" id = "skill3"></p>
                     <p  class = "skill-percentage" id = "skill4"></p>
