Having fun with skills

--- a/index.html
+++ b/index.html
@@ -2,115 +2,55 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
-
     <title>Warikozi-resume</title>
-
     <link rel="icon" href="me.jpg" type="image/x-icon">
-
     <link href= "boostrap.css" rel="stylesheet">
-
     <link href= "resume.css" rel="stylesheet">
-
     <link href= "awesome.css" rel="stylesheet">
-
     <link href= "r.css" rel="stylesheet">
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
-
 </head>
 
 
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
 <body>
-
 <div class="container">
-
     <h1 id="loadingH1"><span><i class="fa"></i></span> RUNNING IDENTITY PROTOCOL<span id="loading">.</span></h1>
-
     <div class="img-container">
-
         <div id="identity-results">
-
             <p id="message"></p>
-
         </div>
-
         <h3 id="loadingMessage2">LOADING RESUME<span id="alpha-loading"></span>.</h3>
-
     </div>
-
     <div class="resume-wrapper">
-
         <section class="profile section-padding">
-
             <div class="container">
-
                 <div class="picture-resume">
-
                     <span><img src="me.jpg" alt="" /></span>
-
-
-
-
-
                     <defs>
-
                         <filter id="goo">
-
                             <feGaussianBlur in="SourceGraphic" stdDeviation="8" result="blur" />
-
                             <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 21 -9" result="cm" />
-
                         </filter>
-
                     </defs>
-
-
-
                 </div>
-
                 <div class="clearfix"></div>
-
                 <div class="clearfix"></div>
-
                 <ul class="list-content">
-
                     <div class="contact-info">
-
                         <div class="section-wrapper clearfix">
-
                             <h3 class="section-title experience-title" id="h" ></h3>  <!-- DESCRIPTION OF YOUR HOBBIES -->
-
                             <p style="color: #00ebd4;" id ="habitpara"></p>
-
                         </div>
-
                     <div class="list-content">
-
-
                         <p id = "myname"></p>
-
-
                         <p id = "myemail"></p>
-
-
                         <p id = "website"></p>
-
-
                         <p id = "phone"></p>
-
-
-
             </div>
-
     </div>
-
     </section>
 
 
@@ -278,12 +218,12 @@
                 <div class="section-wrapper clearfix list-content">
                     <h3 class="section-title experience-title" id = "skills" ></h3>
                     <p class="skill-percentage job-wrapper" id = "skill1"></p>
-                    <p  class="skill-percentage" id = "skill2"></p>
-                    <p  class = "skill-percentage" id = "skill3"></p>
-                    <p  class = "skill-percentage" id = "skill4"></p>
-                    <p class = "skill-percentage" id = "skill5"></p>
-                    <p class = "skill-percentage" id = "skill6"></p>
-                    <p  class = "skill-percentage" id = "skill7"></p>
+                    <p  class="skill-percentage job-wrapper" id = "skill2"></p>
+                    <p  class = "skill-percentage job-wrapper" id = "skill3"></p>
+                    <p  class = "skill-percentage job-wrapper" id = "skill4"></p>
+                    <p class = "skill-percentage job-wrapper" id = "skill5"></p>
+                    <p class = "skill-percentage job-wrapper" id = "skill6"></p>
+                    <p  class = "skill-percentage job-wrapper" id = "skill7"></p>
                 </div>
 
 
