edited work at spectrum

--- a/index.html
+++ b/index.html
@@ -181,7 +181,13 @@
 
                     <div class="company-description">
 
-                        <p id = "webDesign"></p>   <!-- JOB DESCRIPTION  -->
+                        <p id = "webDesign"></p>
+                        <p id = "manged"></p>
+                        <p id = "install"></p>
+                        <p id = "faciliate"></p>
+                        <p id = "custmer"></p>
+                        <p id = "top"></p>
+                        <p id = "escal"></p>
 
                     </div>
 
