edit eero section

--- a/index.html
+++ b/index.html
@@ -211,7 +211,15 @@
 
                     <div class="company-description">
 
-                        <p id = "para"></p>   <!-- JOB DESCRIPTION  -->
+                        <p id = "para"></p>
+                        <p id = "issue"></p>
+                        <p id = "advance"></p>
+                        <p id = "rank"></p>
+                        <p id = "amazon"></p>
+                        <p id = "back"></p>
+                        <p id = "high"></p>
+                        <p id = "led"></p>
+                        <p id = "reso"></p>
 
                     </div>
 
