adding mobile icon

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 </div>
                 <div class="contact-item">
                     <i class="fa fa-phone"></i>
+                    <img src="mobile-button-solid-full.svg" alt="Mobile Button" />
                     <p id="phone"></p>
                 </div>
             </div>
