adding phone icon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="awesome.css" rel="stylesheet">
     <link href="resume.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <script src="https://kit.fontawesome.com/9bced1f173.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -60,8 +61,7 @@
                     <p id="website"></p>
                 </div>
                 <div class="contact-item">
-                    <i class="fa fa-phone"></i>
-                    <img src="mobile-button-solid-full.svg" alt="Mobile Button" />
+                    <i class="fa-solid fa-phone"></i>
                     <p id="phone"></p>
                 </div>
             </div>
