--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <!-- EDUCATION -->
             <section class="content-section">
-                <h2 class="section-title fa fa-graduation-cap section-icon" id="name">
+                <h2 class="section-title" id="name">
                     <i class="fa fa-graduation-cap section-icon"></i>
                 </h2>
 
