Modified fonts and added website

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <p id="myemail"></p>
                 </div>
                 <div class="contact-item">
-                    <i class="fa fa-github"></i>
+                    <i class="fa fa-globe"></i>
                     <p id="website"></p>
                 </div>
                 <div class="contact-item">
