Modified contact section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                 </div>
                 <div class="contact-item">
                     <i class="fa fa-globe"></i>
-                    <p id="website"></p>
+                    <a href="https://security-eng.netlify.app" id="website-link" style="text-decoration: underline;"><p id="website"></p></a>
+
                 </div>
                 <div class="contact-item">
                     <i class="fa-solid fa-phone"></i>
